0029959: Coding - new warnings after integration 29846

Erroneous label declaration has been removed in function SetMaterial from XDEDRAW_Props.cxx